Add pricing page.

--- a/static/assets/css/tarif.css
+++ b/static/assets/css/tarif.css
@@ -66,3 +66,28 @@
   border-top: 1px solid #ccc;
   margin: 10px 0;
 }
+
+@media only screen and (max-width: 800px) {
+  .image-tarif-web {
+    display: none;
+  }
+
+  .image-tarif-mobile img {
+    width: 80%;
+    height: auto;
+  }
+
+  .row {
+    flex-direction: column;
+  }
+
+  .card {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .image-tarif-mobile {
+    display: none;
+  }
+}
