--- a/static/assets/css/common-header.css
+++ b/static/assets/css/common-header.css
@@ -19,21 +19,26 @@ header {
     margin: 0 auto;
   }
   
-  nav ul {
+  .menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
   
-  nav ul li {
+  .menu ul li {
     display: inline-block;
     margin-right: 1em;
   }
   
-  nav ul li a {
+  .menu ul li a {
     color: #fff;
     font-size: large;
     text-decoration: none;
     padding: 0.8em;
   }
-  
+
+@media only screen and (max-width: 800px) {
+  .menu-web {
+    display: none;
+  }
+}
