--- a/static/assets/css/common-header.css
+++ b/static/assets/css/common-header.css
@@ -1,7 +1,8 @@
 header {
     background-color: var(--primary-color);
     position: -webkit-sticky; /* Pour un soutien Safari */
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 1;
   }
